# arias

./: .gitignore  .pylintrc  .travis.yml  README.md  TODO.md  requirements.txt  setup.cfg  setup.py  tox.ini
arias/: job.py  shell.py  test.py  version.py
arias/api/: __init__.py  base.py
arias/api/spiders/: __init__.py  resource.py
arias/cli/: base.py
arias/cli/commands/: __init__.py  crawl.py  deploy.py  pipelines.py  redis.py  server.py  spiders.py
arias/common/: constant.py  exception.py  redisdb.py  util.py
arias/config/: __init__.py  api.py  default.py  factory.py  options.py  redis.py
arias/item_loader/: car_loader.py  dmoz_loader.py
arias/items/: car.py  dmoz.py
arias/pipelines/: base.py  dmoz_pipeline.py  factory.py  redis_pipeline.py
arias/spiders/: base.py  dmoz.py  factory.py  util.py
arias/tasks/: base.py  factory.py  task.py
arias/unittests/: testutil.py
arias/unittests/pipelines/: test_base.py
etc/arias/: arias-config-generator.conf
