[metadata]
name = arias
version = 0.1.0
summary = Scrape cars info
description-file =
    README.md
author = Micu Matei-Marius
author-email = micumatei@gmail.com
home-page =
classifier =
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    arias

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    arias = arias.shell:main

oslo.config.opts =
    arias.conf = arias.config.options:get_options
